# simple-bzlmod

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum  pyproject.toml  rules_proto_config.yaml
go/: BUILD.bazel  tools.go
go/rules_proto/: 0001-direct-mode.patch  0004-write-source-file-info.patch  0005-proto-compiled-sources.patch  0006-prebuilt-grpc-python-plugin.patch  0007-fatal-warnings.patch  0008-go-dev-dependency.patch  extensions.bzl  proto_repositories.bzl
go/rules_proto/language/: BUILD.bazel  language.go
tools/: BUILD.bazel  proto_imports.csv
