load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "language",
    srcs = ["language.go"],
    importpath = "github.com/ewhauser/simple-bzlmod/go/rules_proto/language",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_bazel_gazelle//language",
        "@com_github_stackb_rules_proto//pkg/language/protobuf",
        "@com_github_stackb_rules_proto//pkg/plugin/builtin",
        "@com_github_stackb_rules_proto//pkg/plugin/gogo/protobuf",
        "@com_github_stackb_rules_proto//pkg/plugin/golang/protobuf",
        "@com_github_stackb_rules_proto//pkg/plugin/grpc/grpc",
        "@com_github_stackb_rules_proto//pkg/plugin/grpc/grpcgo",
        "@com_github_stackb_rules_proto//pkg/plugin/grpc/grpcjava",
        "@com_github_stackb_rules_proto//pkg/plugin/grpc/grpcnode",
        "@com_github_stackb_rules_proto//pkg/plugin/grpc/grpcweb",
        "@com_github_stackb_rules_proto//pkg/plugin/scalapb/scalapb",
        "@com_github_stackb_rules_proto//pkg/plugin/stackb/grpc_js",
        "@com_github_stackb_rules_proto//pkg/plugin/stephenh/ts-proto",
        "@com_github_stackb_rules_proto//pkg/rule/rules_cc",
        "@com_github_stackb_rules_proto//pkg/rule/rules_closure",
        "@com_github_stackb_rules_proto//pkg/rule/rules_go",
        "@com_github_stackb_rules_proto//pkg/rule/rules_java",
        "@com_github_stackb_rules_proto//pkg/rule/rules_nodejs",
        "@com_github_stackb_rules_proto//pkg/rule/rules_python",
        "@com_github_stackb_rules_proto//pkg/rule/rules_scala",
    ],
)
